# sono_project

./: .replit  README.md  pyproject.toml  shell.nix
QuantoDormi/: apps.py  urls.py  views.py
Recomendar/: apps.py  urls.py
Recomendar/migrations/: 0001_initial.py
Recomendar/templates/recomendar/: formulario_cliente.html
TIRescue/: apps.py  views.py
TIRescue/templates/tirescue/: home.html
sono_project/: db.sqlite3  manage.py
sono_project/QuantoDormi/templates/quantodormi/: calculadora.html
sono_project/Recomendar/: admin.py  forms.py  models.py  views.py
sono_project/Recomendar/migrations/: 0002_dadosdepessoasmodel_created_at_and_more.py  0003_alter_dadosdepessoasmodel_nome.py  0004_modelodecolchoes.py
sono_project/Recomendar/templates/recomendar/: listar_recomendacoes.html
sono_project/Sonia/: apps.py  models.py  urls.py  utils.py  views.py
sono_project/Sonia/migrations/: 0001_initial.py
sono_project/Sonia/templates/sonia/: base.html
sono_project/Sonia/templates/sonia/treinamento/: create.html  index.html
sono_project/TIRescue/: models.py  urls.py
sono_project/TIRescue/migrations/: 0001_initial.py
sono_project/TIRescue/templates/tirescue/: confirmar_delecao.html  informar_problema.html
sono_project/sonoproject/: asgi.py  settings.py  urls.py
sono_project/static/prod/: global.css
sonoproject/: settings.py  urls.py  wsgi.py
