[tool.poetry]
name = "sono-project"
version = "0.1.0"
description = ""
authors = ["klunix <kleber.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
faker = "^30.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
